<resources>
    <string name="app_name">Assessment2-3034</string>
    <string name="fuel_pal">Fuel Pal</string>
    <string name="button_hitung">Hitung</string>
    <string name="InputKosong">Input Tidak Boleh Kosong!</string>
    <string-array name="jenis">
        <item>Pilih Jenis Bahan Bakar</item>
        <item>Pertalite</item>
        <item>Pertamax</item>
        <item>Solar</item>
    </string-array>
    <string name="jumlahHargaInvalid">Jumlah Harga Tidak Boleh Kosong!</string>
    <string name="jenisBbmInvalid">Pilih Jenis BBM!</string>
    <string name="judulPertaLite">Pertalite</string>
    <string name="judulPertaMax">Pertamax</string>
    <string name="judulSolar">Solar</string>
    <string name="panduanPertalite">Pertalite berwarna hijau, oktan 90 untuk rasio kompresi mesin 9:1 sampai 10:1.</string>
    <string name="panduanPertamax">Pertamax berwarna biru, oktan 92 untuk rasio kompresi mesin 10:1 sampai 11:1</string>
    <string name="panduanSolar">Solar berwarna kuning kecoklatan, cetane number 48 untuk rasio kompresi 15:1 sampai 22:1.</string>
    <string name="about">About Apps</string>
    <string name="copyright">Fuel Pal adalah aplikasi untuk mengetahui berapa liter bahan bakar yang kita dapat dari jumlah uang yang kita miliki dari jenis bahan bakar yang berbeda\n\nAplikasi ini dibuat untuk memenuhi nilai Assessment 2 Mobpro 1. Temukan kodenya di https://github.com/febrinomahardiva/6706213034-Assessment1.git\n\nCopyright © 2023 Febrino Mahardiva Akbar - 6706213034.\nAll rights reserved.</string>
    <string name="share">Share</string>
    <string name="share_template">Jumlah Harga: %1$s\nJenis BBM: %2$s\n%3$s\n%4$s</string>
    <string name="no_data">No Data Found</string>
    <string name="history">History</string>
    <string name="hasil_x">Jumlah Liter: %1$.2f</string>
    <string name="data_x">Jumlah Harga: %1$.1f - Jenis Bbm: %2$.1f - %3$s</string>
    <string name="delete_history">Delete History</string>
    <string name="delete_confirmation">Delete All History?</string>
    <string name="delete">Delete</string>
    <string name="cancel">Cancel</string>
    <string name="fuel">Fuel</string>
    <string name="koneksi_error">Connection Error</string>
    <string name="channel_name">Fuel Info</string>
    <string name="channel_desc">Update Newest Fuel</string>
    <string name="notif_title">Fuel New Price!</string>
    <string name="notif_text">Check it now so youre not curious..</string>
</resources>