<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/menu_hapus"
        android:icon="@drawable/ic_baseline_delete_24"
        android:title="@string/delete_history"
        app:showAsAction="ifRoom" />
</menu>