<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/menu_fuel"
        android:icon="@drawable/baseline_water_drop_24"
        android:title="@string/fuel"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/menu_history"
        android:icon="@drawable/ic_baseline_history_24"
        android:title="@string/history"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/menu_about"
        android:title="@string/about"
        app:showAsAction="never" />

<!--    <item-->
<!--        android:id="@+id/menu_fuel"-->
<!--        android:title="@string/fuel"-->
<!--        app:showAsAction="never" />-->


</menu>